<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewProfileBackdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageViewProfileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/white"
            android:contentDescription="@string/profile"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewProfileImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.38"
            android:src="@drawable/ic_account_circle"/>

        <TextView
            android:id="@+id/textViewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/first_name"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageViewProfileImage" />

        <TextView
            android:id="@+id/textViewProfileBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bio_content"
            android:textAlignment="center"
            android:textColor="@color/primaryLight"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileName" />

        <ProgressBar
            android:id="@+id/progressBarProfile"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileBio" />

        <Button
            android:id="@+id/buttonUpdateTokenId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="Update Token"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>